Fix alignment: remove padding-left from post-list

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -330,6 +330,7 @@ table {
 
 .post-list {
     margin-left: 0;
+    padding-left: 0;
     list-style: none;
 
     >li {
